Scroll considers only header now Do not scroll on expand Fix depth issue Force title word wrap if needed Extend animation to 3s

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -37,7 +37,7 @@ body {
 }
 
 .collapsed {
-  animation: flash-background 2s;
+  animation: flash-background 3s;
 }
 
 @keyframes flash-background {
